# explora

./: .gitignore  Cargo.toml  README.md  config.toml
assets/blocks/: dirt.toml  grass.toml  stone.toml
assets/shaders/: voxels.wgsl
client/: Cargo.toml
client/src/: block.rs  camera.rs  config.rs  key_state.rs  lib.rs  main.rs  net.rs  renderer.rs  singleplayer.rs  vertex.rs  window.rs
client/src/render/: atlas.rs  mesh.rs  mod.rs  texture.rs  vertex.rs  voxels.rs
common/: Cargo.toml
common/src/: block.rs  chunk.rs  config.rs  lib.rs  packet.rs
explora/: Cargo.toml
explora/src/: config.rs  lib.rs  main.rs  network.rs  scene.rs  singleplayer.rs  window.rs
explora/src/render/: atlas.rs  buffer.rs  mod.rs  vertex.rs
server/: Cargo.toml
server-cli/: Cargo.toml
server-cli/src/: main.rs
server/src/: lib.rs
