[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.21.7",  features = ["dangerous_configuration"] }
rcgen = "0.12.1"
tokio = { version = "1.37.0", features=["rt-multi-thread", "macros"] }
quinn.workspace = true
tracing.workspace = true
